# LinuxApplicationDevelopment2022

01_GitBuildReq/: main.c
02_TerminalProject/: Makefile  show.c  test.txt
03_Multifile/: Makefile  prog.c
04_Text/: randomize.sh
05_Debugging/: Makefile  range.c
05_Debugging/scripts/: script1.gdb  script2.gdb
05_Debugging/test/: script1.expected  script2.expected
06_Regexps/: Makefile  esub.c  tests.sh
07_TracingFencing/: Makefile  move  move.c  preload.c
07_TracingFencing/test/: testPROTECTED.txt
09_I18n/: CMakeLists.txt  README.md
09_I18n/src/: I18n.c
09_I18n/translations/: ru.po
11_Testing/: CMakeLists.txt  README.md
11_Testing/src/: CMakeLists.txt  buf.c  buf.h
11_Testing/tests/: CMakeLists.txt  tests.cpp
12_Documenting/: CMakeLists.txt  Doxygen.conf  README.md
12_Documenting/src/: I18n.c
12_Documenting/translations/: ru.po
